@@ -1,5 +1,5 @@
 <?php
-// $Id: theme.maintenance.inc,v 1.25 2009-05-12 08:31:16 dries Exp $
+// $Id: theme.maintenance.inc,v 1.26 2009-05-12 13:43:44 dries Exp $
 
 /**
  * @file
@@ -245,7 +245,6 @@ function template_preprocess_maintenance_page(&$variables) {
   $variables['front_page']        = url();
   $variables['breadcrumb']        = '';
   $variables['feed_icons']        = '';
-  $variables['footer_message']    = filter_xss_admin(variable_get('site_footer', FALSE));
   $variables['head']              = drupal_get_html_head();
   $variables['help']              = '';
   $variables['language']          = $GLOBALS['language'];
